--- a/bananaSpeak.css
+++ b/bananaSpeak.css
@@ -1,7 +1,18 @@
+
 textarea{
     display: block;
     width: 80%;
     height: 15vh;
     padding: 1rem;
     margin: 1rem 3rem;
+}
+
+.output{
+    border: 1px solid black;
+    display: block;
+    width: 80%;
+    height: 15vh;
+    padding: 1rem;
+    margin: 1rem 3rem;
+    font-size: larger;
 }
