--- a/bananaSpeak.css
+++ b/bananaSpeak.css
@@ -1,18 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Amita&family=Baloo+2:wght@500&family=Gotu&family=Halant:wght@300&family=Rozha+One&display=swap');
 
-textarea{
-    display: block;
-    width: 80%;
-    height: 15vh;
-    padding: 1rem;
-    margin: 1rem 3rem;
+:root{
+    --primary-color: #fcd34d;
+    --secondary-color: #fefce8;
 }
 
-.output{
+*{
+    margin: 0%;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Amita', cursive;
+    font-family: 'Baloo 2', cursive;
+    color: #334155;
+    background-color: whitesmoke;
+}
+
+/* heading */
+#heading{
+    background-color: var(--primary-color);
+    text-align: center;
+    font-size: 3rem;
+    padding: 1rem 0;
+}
+
+/* container */
+#container{
+    margin: auto;
+    padding: 1rem;
+    max-width: 650px;
+}
+
+.align{
+    margin: 0.5rem;
+}
+
+#textInput{
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 0.5rem;
+    display: block;
+    width: 100%;
+    height: 18vh;
+    padding: 1rem;
+}
+
+#btnTranslate{
+    background-color: var(--primary-color);
+    border: none;
+    font-family: 'Gotu', sans-serif;
+    padding: 1rem 3rem;
+    font-weight: bold;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+#output{
     border: 1px solid black;
     display: block;
-    width: 80%;
-    height: 15vh;
+    width: 100%;
+    height: 14vh;
     padding: 1rem;
-    margin: 1rem 3rem;
     font-size: larger;
+    background-color: white;
+    overflow:scroll;
 }
+
+/* footer */
+.footer{
+    background-color: var(--primary-color);
+    text-align: center;
+    width: 100%;
+    padding: 1rem;
+    position: fixed;
+    bottom: 0;
+}
+
